--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "bundles/identline"]
 	path = bundles/identline
 	url = git://github.com/Yggdroot/indentLine.git
+[submodule "bundle/color_highlight"]
+	path = bundle/color_highlight
+	url = git://github.com/chrisbra/color_highlight.git
+[submodule "bundle/current-func-info"]
+	path = bundle/current-func-info
+	url = git://github.com/tyru/current-func-info.vim
+[submodule "bundle/identline"]
+	path = bundle/identline
+	url = git://github.com/Yggdroot/indentLine.git
